// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/segmented/demo/basic.md extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Daily"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Weekly"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Monthly"
    >
      Monthly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Quarterly"
    >
      Quarterly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Yearly"
    >
      Yearly
    </div>
  </label>
</div>
`;

exports[`renders ./components/segmented/demo/block.md extend context correctly 1`] = `
<div
  class="ant-segmented ant-segmented-block"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="123"
    >
      123
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="456"
    >
      456
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="longtext-longtext-longtext-longtext"
    >
      longtext-longtext-longtext-longtext
    </div>
  </label>
</div>
`;

exports[`renders ./components/segmented/demo/controlled.md extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Map"
    >
      Map
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Transit"
    >
      Transit
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
      title="Satellite"
    >
      Satellite
    </div>
  </label>
</div>
`;

exports[`renders ./components/segmented/demo/custom.md extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://joeschmoe.io/api/v1/random"
          />
        </span>
        <div>
          User 1
        </div>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-avatar ant-avatar-circle"
          style="background-color:#f56a00"
        >
          <span
            class="ant-avatar-string"
            style="opacity:0"
          >
            K
          </span>
        </span>
        <div>
          User 2
        </div>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon"
          style="background-color:#87d068"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <div>
          User 3
        </div>
      </div>
    </label>
  </div>,
  <br />,
  <div
    class="ant-segmented"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <div>
          Spring
        </div>
        <div>
          Jan-Mar
        </div>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <div>
          Summer
        </div>
        <div>
          Apr-Jun
        </div>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <div>
          Autumn
        </div>
        <div>
          Jul-Sept
        </div>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <div>
          Winter
        </div>
        <div>
          Oct-Dec
        </div>
      </div>
    </label>
  </div>,
]
`;

exports[`renders ./components/segmented/demo/disabled.md extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented ant-segmented-disabled"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Map"
      >
        Map
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Transit"
      >
        Transit
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Satellite"
      >
        Satellite
      </div>
    </label>
  </div>,
  <br />,
  <div
    class="ant-segmented"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item ant-segmented-item-disabled"
    >
      <input
        class="ant-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item ant-segmented-item-disabled"
    >
      <input
        class="ant-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>,
]
`;

exports[`renders ./components/segmented/demo/dynamic.md extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
  </div>,
  <br />,
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Load more options
    </span>
  </button>,
]
`;

exports[`renders ./components/segmented/demo/size.md extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented ant-segmented-lg"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>,
  <br />,
  <div
    class="ant-segmented"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>,
  <br />,
  <div
    class="ant-segmented ant-segmented-sm"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>,
]
`;

exports[`renders ./components/segmented/demo/with-icon.md extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      <span
        class="ant-segmented-item-icon"
      >
        <span
          aria-label="bars"
          class="anticon anticon-bars"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="bars"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </span>
      <span>
        List
      </span>
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      <span
        class="ant-segmented-item-icon"
      >
        <span
          aria-label="appstore"
          class="anticon anticon-appstore"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="appstore"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
            />
          </svg>
        </span>
      </span>
      <span>
        Kanban
      </span>
    </div>
  </label>
</div>
`;
